--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="description" content="A quick overview of the traffic density of tram and bus routes in the city of Karlsruhe">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
 </body>
