--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <aside>
+  </aside>
+  <main>
+  </main>
   <script src="main.js" type="module" defer></script>
 </body>
 </html>
