Add sidebar texts, typography styles

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
   <aside>
+    <h1>heatmap.kvv.guru</h1>
+
+    <section>
+      <h2>About this project</h2>
+      <p>The map provides a quick overview of the traffic density of tram and bus routes in the city of Karlsruhe. The data comes from a <a href="https://developers.google.com/transit/gtfs/reference" target="_blank">GTFS archive</a> provided as <a href="https://www.kvv.de/fahrplan/fahrplaene/open-data.html" target="_blank">open data by the <span lang="de">Karlsruher Verkehrsverbund (KVV)</span></a>. Each of the points is a stop positioned by longitude and latitude. The more trams and buses depart from a stop according to the timetable, the larger the dot on the map.</p>
+    </section>
   </aside>
   <main>
   </main>
