Add legal notice, privacy policy sections + styles for summary/details

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,26 @@
       <h2>About this project</h2>
       <p>The map provides a quick overview of the traffic density of tram and bus routes in the city of Karlsruhe. The data comes from a <a href="https://developers.google.com/transit/gtfs/reference" target="_blank">GTFS archive</a> provided as <a href="https://www.kvv.de/fahrplan/fahrplaene/open-data.html" target="_blank">open data by the <span lang="de">Karlsruher Verkehrsverbund (KVV)</span></a>. Each of the points is a stop positioned by longitude and latitude. The more trams and buses depart from a stop according to the timetable, the larger the dot on the map.</p>
     </section>
+
+    <section>
+      <details>
+        <summary>Legal Notice</summary>
+        <p>
+          Pascal&nbsp;Wittler<br>
+          Mathystraße&nbsp;18<br>
+          76133&nbsp;Karlsruhe<br>
+          Germany<br>
+          Contact:&nbsp;<a href="mailto:kvv.guru@pascalwittler.de">kvv.guru@pascalwittler.de</a>
+        </p>
+      </details>
+
+      <details>
+        <summary>Privacy Policy</summary>
+        <p>
+          All resources used on this website are hosted locally. No third party service or technology is involved. An access log including a part of your IP address, your user agent (name and version of your operating system and web browser sent automatically by your browser), date and time is logged after each load of this page or its resources. European and German law applies. You can contact me using the information under "Legal Notice".
+        </p>
+      </details>
+    </section>
   </aside>
   <main>
   </main>
