--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
     </section>
   </aside>
   <main>
+    <canvas></canvas>
   </main>
   <script src="main.js" type="module" defer></script>
 </body>
