Add filters sidebar section

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
     </section>
 
     <section>
+      <h2>Filters</h2>
+      <p>Here you can travel through the years and soon also filter by means of transport and by operators:</p>
+    </section>
+
+    <section>
       <details>
         <summary>Legal Notice</summary>
         <p>
