Add year switch wrap markup

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
     <section>
       <h2>Filters</h2>
       <p>Here you can travel through the years and soon also filter by means of transport and by operators:</p>
+
+      <div class="filter filter-years">
+        <h3>Years</h3>
+      </div>
     </section>
 
     <section>
